--- a/index.html
+++ b/index.html
@@ -270,6 +270,24 @@
                 <button type="submit" class="btn btn-primary btn-lg" id="generateBtn">Generate Privacy Policy</button>
             </div>
         </form>
+
+        <!-- Loading Indicator -->
+        <div id="loadingIndicator" class="d-none text-center my-4">
+            <div class="spinner-border text-primary" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+            <p class="mt-2">Generating your policy...</p>
+        </div>
+
+        <!-- Result Display Area -->
+        <div id="resultContainer" class="mt-5">
+            <!-- Generated policy will appear here -->
+        </div>
+
+        <!-- Copy Button -->
+        <div class="text-center mt-3 mb-5">
+            <button id="copyBtn" class="btn btn-secondary" disabled>Copy Policy Text</button>
+        </div>
     </div>
 
     <!-- Link to Bootstrap JS and Popper.js (required for some Bootstrap components) -->
